# csystem

./: .gitmodules  CMakeLists.txt
cmake/: csystem_config.h.in
cxx/: CMakeLists.txt  csystem.cpp  path.cpp  standardpaths.cpp
example/: CMakeLists.txt  main.c  main.cpp
include/csystem/: crypto.h  csystem++.hpp  csystem.h  features.h  file.h  home.h  path.h  standardpaths.h  string.h
include/csystem/crypto/: crypto.h
include/csystem/terminal/: form.h  terminal.h
src/: CMakeLists.txt  features.c  file.c  path.c  paths.c  standardpaths.c  standardpaths.m  standardpaths_osx.h  string.c
src/crypto/: CMakeLists.txt  crypto-macos.c  crypto-mbedtls.c  crypto-private.h  crypto.c
src/terminal/: CMakeLists.txt  form.c  terminal.c
test/: CMakeLists.txt  crypto.c  main.c  path.c  string.c
